dsa code refactor