@@ -1,17 +1,9 @@
-package graph;
+package graph.dfs;
 
 import java.util.ArrayList;
 import java.util.List;
 
 public class AllPathFromSrcToTgtDFS {
-    public static void main(String[] args)
-    {
-        int[][] graph = { {1,2},{3},{3},{} };
-        System.out.println(allPathsSourceTarget(graph)); //Output: [[0,1,3],[0,2,3]]
-        
-        int[][] graph2 = {{4,3,1},{3,2,4},{3},{4},{}};
-        System.out.println(allPathsSourceTarget(graph2)); //Output: [[0,4],[0,3,4],[0,1,3,4],[0,1,2,3,4],[0,1,4]]
-    }
 
     public static List<List<Integer>> allPathsSourceTarget(int[][] graph)
     {
@@ -30,12 +22,12 @@ public class AllPathFromSrcToTgtDFS {
         if(current == target){
             result.add(new ArrayList<>(path));
         }else {
-            int[] neighbors = graph[current];
-            for(int neighbor : neighbors){
+            //explore neighbours
+            for(int neighbor : graph[current]){
                 dfs(neighbor, target, graph, path, result);
             }
         }
 
-        path.remove(path.size()-1); //backtracking
+        path.removeLast(); //backtracking
     }
 }
